fixed incorrect link for insta contact info

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       </p>
       <p>Drawprompt was created as a tool to for use with virtual drawing sessions with friends during the corona virus lockdown.</p>
       <p> Drawprompt was created by <b>Jamica Ortiz</b>. She's a software engineer and artist who enjoys working with water-based media alongside her technology career.</p>
-      <p>Get in touch with Jamica on <a href="https://www.instagram.com/citrusmatcha/" target="new">Instagram</a>, <a href="https://twitter.com/citrusmatcha" target="new">Twitter</a></a> or <a href="https://github.com/citrusmatcha" target="new">Github.</a></p>
+      <p>Get in touch with Jamica on <a href="https://www.instagram.com/citrus.matcha/" target="new">Instagram</a>, <a href="https://twitter.com/citrusmatcha" target="new">Twitter</a></a> or <a href="https://github.com/citrusmatcha" target="new">Github.</a></p>
       <p>If you enjoyed using Drawprompt, please consider dropping a <a href="https://ko-fi.com/jamica" target="new">ko-fi :) </a><br/> 
         All proceeds earned from this project will be donated to the NHS!</p>
     </div>
