--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <p> Drawprompt was created by <b>Jamica Ortiz</b>. She's a software engineer and artist who enjoys working with water-based media alongside her technology career.</p>
       <p>Get in touch with Jamica on <a href="https://www.instagram.com/citrusmatcha/" target="new">Instagram</a>, <a href="https://twitter.com/citrusmatcha" target="new">Twitter</a></a> or <a href="https://github.com/citrusmatcha" target="new">Github.</a></p>
       <p>If you enjoyed using Drawprompt, please consider dropping a <a href="https://ko-fi.com/jamica" target="new">ko-fi :) </a><br/> 
-        All proceeds earned from this project will be donated to the NHS!</p>
+        All proceeds earned from this project is intended be donated to covid-19 support charities in the UK :)</p>
     </div>
   </body>
   </html>
