--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="divContainer">
       <p class="containerDesc footyTxt">Enjoyed using drawprompt? Share your drawings on Insta with 
         <a class="links" href="https://www.instagram.com/explore/tags/drawprompter/">#drawprompter</a><br/> 
-        , tell your friends so they can also play! You can also say thanks with a <a href="https://ko-fi.com/jamica" target="new">ko-fi :)</a></p> 
+        , tell your friends so they can also play! You can also say thanks with a follow on <a href="https://www.instagram.com/citrusmatcha">insta</a> or <a href="https://www.twitter.com/citrusmatcha">twitter</a></p> 
 
         <div class="nav footyTxt">
           <ul>
